# trie.h

./: .gitignore  CMakeLists.txt  README.md  main.c  trie.c  trie.h
test/: CMakeLists.txt  addtrie.c  deltrie.c  main.c  mktrie.c  searchtrie.c  two.c
